completed the first heading of the page with paragraph

--- a/Developer Portfolio Starter Files/Assets/index.html
+++ b/Developer Portfolio Starter Files/Assets/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <div class="navName">Johnathan Specter</div>
+        <div class="navName">Armaan Vashisht</div>
         <div class="navLinks">
             <div>Articles</div>
             <div>Chats</div>
@@ -20,5 +20,20 @@
             <button class="btnMain">Get in Touch</button>
         </div>
     </nav>
+    <section class="mainContent">
+        <div class="mainHeading">
+            <h1>Helping companies build</h1>
+            <h1>better, scalable software.</h1>
+            <p>Award-winning web developer and author with over 15+ years of working</p>
+            <p>experience with Fortune 500 companies lime Apple, Google, Facebook, and</p>
+            <p>more.</p>
+        </div>
+        <div class="companyNames">
+            
+        </div>
+        <div class="mainPhotos">
+            
+        </div>
+    </section>
 </body>
 </html>
