completed the Company names images part

--- a/Developer Portfolio Starter Files/Assets/index.html
+++ b/Developer Portfolio Starter Files/Assets/index.html
@@ -29,7 +29,12 @@
             <p>more.</p>
         </div>
         <div class="companyNames">
-            
+            <img src="./Logos/Walmart.svg" alt="">
+            <img src="./Logos/JP Morgan.svg" alt="">
+            <img src="./Logos/Visa.svg" alt="">
+            <img src="./Logos/Tinder.svg" alt="">
+            <img src="./Logos/Samsung.svg" alt="">
+            <img src="./Logos/Verizon.svg" alt="">
         </div>
         <div class="mainPhotos">
             
