completed the mainPhotos part and mainContent Section completed

--- a/Developer Portfolio Starter Files/Assets/index.html
+++ b/Developer Portfolio Starter Files/Assets/index.html
@@ -29,15 +29,30 @@
             <p>more.</p>
         </div>
         <div class="companyNames">
-            <img src="./Logos/Walmart.svg" alt="">
-            <img src="./Logos/JP Morgan.svg" alt="">
-            <img src="./Logos/Visa.svg" alt="">
-            <img src="./Logos/Tinder.svg" alt="">
-            <img src="./Logos/Samsung.svg" alt="">
-            <img src="./Logos/Verizon.svg" alt="">
+            <img src="./Logos/Walmart.svg" alt="Walmart">
+            <img src="./Logos/JP Morgan.svg" alt="JP Morgan">
+            <img src="./Logos/Visa.svg" alt="Visa">
+            <img src="./Logos/Tinder.svg" alt="Tinder">
+            <img src="./Logos/Samsung.svg" alt="Samsung">
+            <img src="./Logos/Verizon.svg" alt="Verizon">
         </div>
         <div class="mainPhotos">
-            
+            <div class="photo1">
+                <img src="./Spense.png" alt="Spense">
+                <h1>Spense.com &#8594;</h1>
+                <p>Rethinking the way writers get paid, an open-source platform</p>
+                <p>designed to help writers focus more on writing, less on</p>
+                <p>when and how they'll get paid. Project in collaboration with</p>
+                <p>Codewll.cc</p>
+            </div>
+            <div class="photo2">
+                <img src="./YelpCamp.png" alt="YelpCamp">
+                <h1>YelpCamp.com &#8594;</h1>
+                <p>Allowing backup travelers to perfectly plan their trip</p>
+                <p>through an open-source platform similar to TripAdvisor. With</p>
+                <p>over 1m MAU, YelpCamp has been the crowd's favorite in</p>
+                <p>2021.</p>
+            </div>
         </div>
     </section>
 </body>
