completed more content part

--- a/Developer Portfolio Starter Files/Assets/index.html
+++ b/Developer Portfolio Starter Files/Assets/index.html
@@ -55,5 +55,32 @@
             </div>
         </div>
     </section>
+
+    <section class="moreContent">
+        <div class="moreDivs-1 mcMargin">
+            <h1>A co-founder at one the </h1>
+            <h1>world's largest communities.</h1>
+            <p>The combined experience i have working at the top Fortune</p>
+            <p>500 companies has allowed m to develop a skillset that</p>
+            <p>helps me in not just development, but in every aspect of any</p>
+            <p>business.</p>
+
+            <p>i'm proud to announce that I am now working at one of the</p>
+            <p>world's largest communities teaching young minds about how</p>
+            <p>to sell yourself as a developer and open them to a whole new</p>
+            <p>world of opportunities.</p>
+        </div>
+        <div class="moreDivs-2">
+            <p>As a developer, you have everything available to you and all</p>
+            <p>that's holding you back is yourself.</p>
+            <p>A quote I live by perfectly illustrates what I mean.</p>
+            <p>"How big would you dream, if you <b>knew</b> you wouldn't fail?"</p>
+            <p>You've already gone through the hardest parts being a</p>
+            <p>developer, it's time to elevate your skills and became a leader</p>
+            <p>in something you're passionate about.</p>
+            <p>I'm happy to chat over coffee sone time about how I can help</p>
+            <p>your company.</p>
+        </div>
+    </section>
 </body>
 </html>
