completed the contact section

--- a/Developer Portfolio Starter Files/Assets/index.html
+++ b/Developer Portfolio Starter Files/Assets/index.html
@@ -82,5 +82,17 @@
             <p>your company.</p>
         </div>
     </section>
+
+    <section class="contactSec">
+        <div class="contactContent">
+            <h1>Interested in working with me?</h1>
+            <p>I'm active on all social media platforms listed below, but you</p>
+            <p>can also email me and i will get back to you within 24-48</p>
+            <p>hours.</p>
+        </div>
+        <div class="contactBtnDiv">
+            <button class="btnMain contactBtn">Get in Touch</button>
+        </div>
+    </section>
 </body>
 </html>
