completed project and completd footer

--- a/Developer Portfolio Starter Files/Assets/index.html
+++ b/Developer Portfolio Starter Files/Assets/index.html
@@ -94,5 +94,13 @@
             <button class="btnMain contactBtn">Get in Touch</button>
         </div>
     </section>
+    <footer>
+        <h3>Armaan Vashisht</h3>
+        <div class="socialIcons">
+        <img src="./Social Icons/Twitter.svg" alt="Twitter">
+        <img src="./Social Icons/LinkedIn.svg" alt="LinkedIn">
+        <img src="./Social Icons/Github.svg" alt="Github">
+        </div>
+    </footer>
 </body>
 </html>
